--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ th { background: rgba(0,230,255,0.1); color:#00eaff; }
 </table>
 </div>
 <div style="text-align:center; margin:20px 0;">
-      <img src="" alt="Banner" style="max-width:400px; width:100%; height:auto; border-radius:8px; box-shadow:0 0 20px rgba(0,0,0,0.5);">
+      <img src="https://github.com/AjinkyaMalik/Vidyotsav-Scoreboard/blob/main/vidyotsavimage.png" alt="Banner" style="max-width:400px; width:100%; height:auto; border-radius:8px; box-shadow:0 0 20px rgba(0,0,0,0.5);">
   </a>
 </div>
 <div id="winnerPopup" style="display:none;"></div>
@@ -309,3 +309,4 @@ loadFromFirebase();
 </script>
 </body>
 </html>
+
