--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@ th { background: rgba(0,230,255,0.1); color:#00eaff; }
 <tbody></tbody>
 </table>
 </div>
+    <!-- Centered Image with hyperlink -->
 <div style="text-align:center; margin:20px 0;">
-      <img src="https://github.com/AjinkyaMalik/Vidyotsav-Scoreboard/blob/main/vidyotsavimage.png" alt="Banner" style="max-width:400px; width:100%; height:auto; border-radius:8px; box-shadow:0 0 20px rgba(0,0,0,0.5);">
+  <a href="https://github.com/AjinkyaMalik/Vidyotsav-Scoreboard/blob/main/vidyotsavimage.png" target="_blank">
   </a>
 </div>
 <div id="winnerPopup" style="display:none;"></div>
@@ -309,4 +310,5 @@ loadFromFirebase();
 </script>
 </body>
 </html>
+
 
