--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ th { background: rgba(0,230,255,0.1); color:#00eaff; }
 <th>Total Points</th>
 </tr>
 </thead>
-
+<tbody></tbody>
 </table>
 </div>
 <div id="winnerPopup" style="display:none;"></div>
@@ -305,6 +305,7 @@ loadFromFirebase();
 </script>
 </body>
 </html>
+
 
 
 
