--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ th { background: rgba(0,230,255,0.1); color:#00eaff; }
 <th>School Name</th>
 <th>गीर्वाणगानम्</th>
 <th>Fandom Fiesta</th>
-<th>ChipkuChikpu</th>
+<th>ChipkuChipku</th>
 <th>Gen Alpha Scientist</th>
 <th>Our state,our legacy</th>
 <th>पट- बोला</th>
@@ -288,3 +288,4 @@ loadFromFirebase();
 
 </body>
 </html>
+
